--- a/main.css
+++ b/main.css
@@ -17,7 +17,7 @@
     font-family: 'Open Sans', sans-serif;
 }
 
-.body{
+.body {
     overflow: hidden;
 
 }
@@ -25,15 +25,15 @@
 .title {
     font-family: titillium-Web, sans-serif !important;
     text-transform: uppercase;
-    
+
 }
 
-.section-title{
-    
+.section-title {
+
     font-family: titillium-Web;
     font-weight: bold;
     font-size: 2.4rem;
-    
+
 }
 
 
@@ -77,11 +77,11 @@
     background-color: #e2e2e2;
 }
 
-.premios{
-    background-color: #2f2454 ;
+.premios {
+    background-color: #2f2454;
 }
 
-.requisitos{
+.requisitos {
     background-color: #eee9f9;
 }
 
@@ -100,7 +100,7 @@
 .bg-nav {
     --bs-bg-opacity: 1;
     background-color: #383ab5 !important;
-    
+
 }
 
 .bg-bullet {
@@ -125,7 +125,7 @@
 
 
 .banner {
-    width: 100% ;
+    width: 100%;
     height: 50vh;
     color: white;
     overflow: hide;
@@ -237,7 +237,7 @@ button:hover {
 
 .prizes-container-fluid,
 .prizes-container {
-	color: white;
+    color: white;
     font-family: "Open Sans";
 }
 
@@ -245,7 +245,7 @@ button:hover {
     padding: 100px 0px;
     -webkit-perspective: 1000;
     perspective: 1000;
-    
+
 }
 
 
@@ -289,7 +289,7 @@ button:hover {
 .profile-card-4 .profile-description {
     color: #777;
     padding: 10px;
-	 font-weight: 600;
+    font-weight: 600;
     font-size: 18px;
 }
 
@@ -331,19 +331,20 @@ button:hover {
     float: left;
     width: 100%;
     padding: 89px 0 60px;
-    background:#f5f5f5;
-  }
-  
-  .our-faq-wrapper {
+    background: #f5f5f5;
+}
+
+.our-faq-wrapper {
     padding: 90px 0 60px;
-    background:#fff;  
-  }
-  .faq-accordion .faq-card {
+    background: #fff;
+}
+
+.faq-accordion .faq-card {
     border: none;
     margin-bottom: 30px;
-  }
+}
 
-  .our-faq-wrapper .btn-link {
+.our-faq-wrapper .btn-link {
     display: block;
     width: 100%;
     text-align: left;
@@ -355,12 +356,12 @@ button:hover {
     font-size: 16px;
     overflow: hidden;
     border: none;
-    font-weight:600;  
+    font-weight: 600;
     text-decoration: none;
 
-  }
- 
-  .our-faq-wrapper .btn-link:after {
+}
+
+.our-faq-wrapper .btn-link:after {
     text-decoration: none;
     position: absolute;
     content: '\f068';
@@ -369,12 +370,14 @@ button:hover {
     -webkit-transform: translateY(-50%);
     transform: translateY(-50%);
     font-family: fontawesome;
-  }
-  .our-faq-wrapper .btn-link.collapsed:after {
+}
+
+.our-faq-wrapper .btn-link.collapsed:after {
     text-decoration: none;
     content: '\f067';
-  }
-  .our-faq-wrapper .btn-link:before {
+}
+
+.our-faq-wrapper .btn-link:before {
     text-decoration: none;
     position: absolute;
     content: '';
@@ -385,16 +388,19 @@ button:hover {
     width: 50%;
     left: 90%;
     top: 0;
-  }
-  .faq-card-header {
+}
+
+.faq-card-header {
     padding: 0;
     background: transparent;
     border-bottom: none;
-  }
-  .faq-card-body {
+}
+
+.faq-card-body {
     position: relative;
-  }
-  .faq-card-body:after {
+}
+
+.faq-card-body:after {
     position: absolute;
     content: '';
     height: 2px;
@@ -402,8 +408,9 @@ button:hover {
     left: 0;
     bottom: 0;
     background: #242c42;
-  }
-  .faq-card-body:before {
+}
+
+.faq-card-body:before {
     position: absolute;
     content: '';
     height: 2px;
@@ -412,4 +419,14 @@ button:hover {
     bottom: 0;
     background: #855fdd;
     z-index: 1;
-  }
+}
+
+.btn-check:focus+.btn-link,
+.btn-link:focus,
+.btn-link:active,
+.btn-link:hover {
+    outline: none !important;
+    box-shadow: none !important;
+    background-color: #242c42 !important;
+    color: white !important;
+}
